test/netlist/error/invalid-funarg-3.bop
#define N "and"

A<fun>(a) = b
where
  b = fun(a);
end where;

Main(a) = b
where
  b = A<"%{N}">(a);
end where;
